--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="main-form-titulo">
               <h3>Solicite uma proposta</h3>
             </div>
-            <form method="post" action="#inicio">
+            <form method="post" class="form-teste" action="#inicio">
               <select class="form-control">
                 <option selected>Selecione um serviço</option>
                 <option>Serviço 1</option>
@@ -113,7 +113,7 @@
           <div class=" main-form-titulo">
             <h3>Solicite uma proposta</h3>
           </div>
-          <form method="post" action="#inicio">
+          <form class="form-serv" method="post" action="#inicio">
             <select class="form-control">
               <option selected>Selecione um serviço</option>
               <option>Serviço 1</option>
@@ -142,7 +142,7 @@
       <p class="quemsomos-bdesc">
         Inserida no Movimento Empresa Junior, a Maximiza Engenharia foi
         fundada em 29 de agosto de 2018, é uma empresa sem fins lucrativos,
-        formada excluisamente por alunos do ensino superior da Universadade
+        formada exclusivamente por alunos do ensino superior da Universadade
         Potiguar – Campus Mossoró, contando com a colaboração e apoio da IES.
         Nós realizamos projetos e consultorias em engenharia que abrangem
         todos os cursos da Escola STEAM – Escola de Ciências, Tecnologia,
@@ -192,7 +192,7 @@
   <a id="servicos-a" class="anchor">a</a>
   <!-- INICIO SERVIÇOS -->
   <section class="servicos container-fluid">
-    <div class="row">
+    <div class="row serv-row-tablet">
       <div class="servicosImg col-md-4">
         <img class="servicosBg-img img-responsive" src="img/bgleftServicos.png" alt="" />
       </div>
@@ -208,7 +208,7 @@
             dolor sit amet, consectetur adipiscing elit.
           </p>
         </div>
-        <div class="servicosCards row">
+        <div class="servicosCards row" >
           <!-- CARD-1 -->
           <div class="servico-card col-md-2.3 col-xs-12 ">
             <img class="servicosCard-img img-fluid" src="img/servico1.png" alt="" />
@@ -444,29 +444,33 @@
 
   <!-- INICIO CLIENTES -->
   <a id="clientes-a" class="anchor">a</a>
-  <div id="clientes">
-    <div class="col-12 narrow text-center">
-      <h1 class="stitulo">Clientes</h1>
+  <div class="container-fluid" id="clientes">
+    <div class="row">
+      <div class="col-12 narrow text-center">
+        <h1 class="stitulo">Clientes</h1>
+      </div>
     </div>
-    <div class="clientes-container">
-      <div class="center slider">
-        <div>
-          <img src="img/iconeject.png" />
-        </div>
-        <div>
-          <img src="img/iconeject.png" />
-        </div>
-        <div>
-          <img src="img/iconeject.png" />
-        </div>
-        <div>
-          <img src="img/iconeject.png" />
-        </div>
-        <div>
-          <img src="img/iconeject.png" />
-        </div>
-        <div>
-          <img src="img/iconeject.png" />
+    <div class="row">
+      <div class="clientes-container">
+        <div class="center slider">
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
+          <div>
+            <img src="img/iconeject.png" />
+          </div>
         </div>
       </div>
     </div>
@@ -573,7 +577,7 @@
   <!-- Bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
+    </script>
   <!-- Slick Carousel -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="slick/slick.js" type="text/javascript" charset="utf-8"></script>
@@ -591,28 +595,28 @@
         slidesToShow: 5,
         slidesToScroll: 1,
         responsive: [{
-            breakpoint: 1024,
-            settings: {
-              slidesToShow: 3,
-              slidesToScroll: 1
-            }
-          },
-          {
-            breakpoint: 600,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 2,
-              centerMode: true
-            }
-          },
-          {
-            breakpoint: 480,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1,
-              centerMode: true
-            }
+          breakpoint: 1024,
+          settings: {
+            slidesToShow: 3,
+            slidesToScroll: 1
           }
+        },
+        {
+          breakpoint: 600,
+          settings: {
+            slidesToShow: 2,
+            slidesToScroll: 2,
+            centerMode: true
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            centerMode: true
+          }
+        }
         ]
       });
     });
@@ -629,26 +633,26 @@
         slidesToShow: 1,
         slidesToScroll: 1,
         responsive: [{
-            breakpoint: 1024,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          },
-          {
-            breakpoint: 600,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1,
-            }
-          },
-          {
-            breakpoint: 480,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1,
-            }
+          breakpoint: 1024,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1
           }
+        },
+        {
+          breakpoint: 600,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1,
+          }
+        },
+        {
+          breakpoint: 480,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1,
+          }
+        }
         ]
       });
     });
